--- a/css/style.css
+++ b/css/style.css
@@ -22,7 +22,7 @@
       }
 
 
-
+      
 
       .clickable{
         cursor: pointer;
@@ -31,11 +31,14 @@
 
       .mblViews{
         width:100%;
+        height:auto;
+        max-height: 300px;
       }
 
        .mblMainView{
         width:300px;
         height:auto;
+        max-height: 300px;
       }
 
       .mblListItemRightIcon{
@@ -68,6 +71,10 @@
         height:25px !important;
         line-height:25px !important;
         font-size:12px;
+      }
+
+      .popupContentItem{
+        padding:2px;
       }
 
       /*****BASEMAP*********/
