--- a/css/style.css
+++ b/css/style.css
@@ -79,12 +79,26 @@
 
       /*****BASEMAP*********/
 
+      #basemapContainer {
+        position:absolute; 
+        top:10px; 
+        right:10px; 
+        z-Index:999;
+      }
+
+       #basemapContainer.showthemeMenu {
+        top:60px;
+      }
+
       #basemapTitlePane_pane{
+         background-color: #000;
          background-color: rgba(0,0,0,0.75);  
          font-family: "Lato";
          font-size:11px;        
          color:#FFF;
       }
+
+
       #basemapTitlePane .dijitTitlePaneTitle{
         background: #5bacdf url() !important;
         height:22px;
@@ -119,17 +133,23 @@
         border-radius:0px;
       }
       .esriSimpleSliderIncrementButton{
+        background-color: #000;
         background-color: rgba(0,0,0,0.75);
+        
       }
       
       .esriSimpleSliderDecrementButton{
+         background-color: #000;
         background-color: rgba(0,0,0,0.75);
+       
       }
 
       #fullExtentDiv{
         width:30px;
         height:30px;
+        background-color: #000;
         background-color: rgba(0,0,0,0.75);  
+        
         border-bottom:1px solid #656565;    
       }
 
@@ -167,7 +187,9 @@
       width:25%;
       height:50px;
       text-align: center;
+      background-color: #000;
       background-color: rgba(0,0,0,0.75);
+
       color:#FFF;
       line-height: 50px;
       border-right:1px solid #656565;
@@ -176,7 +198,6 @@
       -moz-box-sizing: border-box;    /* Firefox, other Gecko */
       box-sizing: border-box;         /* Opera/IE 8+ */
       }
-
 
 
       #themeList li.menuItem:hover {
