Commented out css for legend

--- a/css/style.css
+++ b/css/style.css
@@ -280,7 +280,7 @@
         top: -35px;
       }
       /********/
-      /*** Legend ***/
+      /*** Legend ***
       #legendPanel {
         z-index: 50;
         position: absolute;
